force-app/main/default/objects/Encounter__c/fields/CR__c.field-meta.xml
<CustomField>
    <fullName>CR__c</fullName>
    <description>Challenge Rating of the encounter</description>
    <label>CR</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>