force-app/main/default/objects/Encounter__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Region</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Encounters</relationshipLabel>
    <relationshipName>Encounters</relationshipName>
    <type>Lookup</type>
</CustomField>