force-app/main/default/objects/Encounter__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Contest (usually requiring initiative) or Quest (mission given by a character)</description>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contest</fullName>
                <default>true</default>
                <label>Contest</label>
            </value>
            <value>
                <fullName>Quest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>