force-app/main/default/objects/Encounter__c/recordTypes/Base.recordType-meta.xml
<RecordType>
    <fullName>Base</fullName>
    <active>true</active>
    <description>The record used to reference when constructing an encounter.</description>
    <label>Base</label>
</RecordType>