force-app/main/default/objects/Encounter__c/recordTypes/Instance.recordType-meta.xml
<RecordType>
    <fullName>Instance</fullName>
    <active>true</active>
    <description>An instance of the Base encounter record to be used to record damage and results.</description>
    <label>Instance</label>
</RecordType>